--- a/Code/Server/Revenj.Http/App.config
+++ b/Code/Server/Revenj.Http/App.config
@@ -2,11 +2,13 @@
 <configuration>
   <configSections>
     <section name="autofacConfiguration" type="Autofac.Configuration.SectionHandler, Autofac.Configuration" />
+    <section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog"/>
   </configSections>
   <appSettings>
     <add key="PluginsPath" value="." />
-    <add key="ServerAssembly" value="../../cache/GeneratedModel.dll"/>
-    <add key="ConnectionString" value="server=localhost;port=5432;database=Revenj;user=revenj;password=revenj;encoding=unicode" />
+    <add key="ServerAssembly" value="/home/marin/code/playdsl/revenj/generatedModel.dll"/>
+    <add key="ConnectionString" value="server=localhost;port=5432;database=dccTest;user=dccTest;password=dccTest;encoding=unicode" />
+    <add key="DocumentsPath" value="docs" />
     <add key="HttpAddress_local8999" value="http://localhost:8999/" />
     <add key="DefaultAuthorization" value="Basic cmV2ZW5qOnJldmVuag==" />
     <add key="CustomAuth" value="Revenj.Http.NoAuth"/>
@@ -41,4 +43,14 @@
       <component type="Revenj.Http.NoAuth, Revenj.Http" service="Revenj.Security.IPermissionManager, Revenj.Security.Interface" />
     </components>
   </autofacConfiguration>
+  <nlog>
+    <targets>
+      <target name="errorFile" type="File" fileName="${basedir}/logs/error.log" />
+      <target name="traceFile" type="File" fileName="${basedir}/logs/trace.log" />
+    </targets>
+    <rules>
+      <logger name="*" minLevel="Error" writeTo="errorFile" />
+      <logger name="*" minLevel="Trace" writeTo="traceFile" />
+    </rules>
+  </nlog>
 </configuration>
