--- a/Code/Server/Revenj.WindowsService/App.config
+++ b/Code/Server/Revenj.WindowsService/App.config
@@ -5,7 +5,7 @@
   </configSections>
   <appSettings>
     <add key="PluginsPath" value="." />
-    <add key="ServerAssembly" value="../../cache/GeneratedModel.dll"/>
+    <add key="ServerAssembly" value="../../playdsl/revenj/generatedModel.dll"/>
     <add key="ConnectionString" value="server=localhost;port=5432;database=Revenj;user=revenj;password=revenj;encoding=unicode" />
   </appSettings>
   <autofacConfiguration>
